--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,7 @@
   "compilerOptions": {
     "target": "es2017",
     "module": "commonjs",
-    "lib": [
-      "es2017",
-      "esnext.asynciterable"
-    ],
+    "lib": ["es2017", "esnext.asynciterable", "DOM"],
     "skipLibCheck": true,
     "sourceMap": true,
     "outDir": "./dist",
@@ -37,12 +34,6 @@
       }
     ]
   },
-  "exclude": [
-    "node_modules"
-  ],
-  "include": [
-    "./lib/**/*.ts",
-    "./scripts/**/*.ts",
-    ".next/types/**/*.ts"
-  ]
+  "exclude": ["node_modules"],
+  "include": ["./lib/**/*.ts", "./scripts/**/*.ts", ".next/types/**/*.ts"]
 }
